--- a/index.html
+++ b/index.html
@@ -231,11 +231,10 @@
                 </div>
                 <h1 class="display-1 mb-0" style="color: #000000">01</h1>
               </div>
-              <h5 class="text-white">Home Security</h5>
+              <h5 class="text-white">Innovation</h5>
               <hr class="w-25" />
               <span
-                >Vero elitr justo clita lorem ipsum dolor at sed stet sit diam
-                rebum ipsum et diam justo clita et</span
+                > Embracing new ideas and technologies to drive progress and improvement.</span
               >
             </div>
           </div>
@@ -693,164 +692,7 @@
     </div>
     <!-- Quote End -->
 
-    <!-- Team Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-          <div
-            class="bg-primary mb-3 mx-auto"
-            style="width: 60px; height: 2px"
-          ></div>
-          <h1 class="display-5 mb-5">Team Members</h1>
-        </div>
-        <div class="row g-4">
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="team-item">
-              <div class="overflow-hidden position-relative">
-                <img class="img-fluid" src="img/team-1.jpg" alt="" />
-                <div class="team-social">
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="text-center p-4">
-                <h5 class="mb-0">Full Name</h5>
-                <span class="text-primary">Designation</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="team-item">
-              <div class="overflow-hidden position-relative">
-                <img class="img-fluid" src="img/team-2.jpg" alt="" />
-                <div class="team-social">
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="text-center p-4">
-                <h5 class="mb-0">Full Name</h5>
-                <span class="text-primary">Designation</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="team-item">
-              <div class="overflow-hidden position-relative">
-                <img class="img-fluid" src="img/team-3.jpg" alt="" />
-                <div class="team-social">
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="text-center p-4">
-                <h5 class="mb-0">Full Name</h5>
-                <span class="text-primary">Designation</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-            <div class="team-item">
-              <div class="overflow-hidden position-relative">
-                <img class="img-fluid" src="img/team-4.jpg" alt="" />
-                <div class="team-social">
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a class="btn btn-square btn-dark rounded-circle m-1" href=""
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="text-center p-4">
-                <h5 class="mb-0">Full Name</h5>
-                <span class="text-primary">Designation</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Team End -->
-
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-      <div class="container">
-        <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-          <div
-            class="bg-primary mb-3 mx-auto"
-            style="width: 60px; height: 2px"
-          ></div>
-          <h1 class="display-5 mb-5">Testimonial</h1>
-        </div>
-        <div
-          class="owl-carousel testimonial-carousel wow fadeInUp"
-          data-wow-delay="0.1s"
-        >
-          <div
-            class="testimonial-item text-center"
-            data-dot="<img class='img-fluid' src='img/testimonial-1.jpg' alt=''>"
-          >
-            <p class="fs-5">
-              Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo
-              duo labore sed sed. Magna ut diam sit et amet stet eos sed clita
-              erat magna elitr erat sit sit erat at rebum justo sea clita.
-            </p>
-            <h4>Client Name</h4>
-            <span class="text-primary">Profession</span>
-          </div>
-          <div
-            class="testimonial-item text-center"
-            data-dot="<img class='img-fluid' src='img/testimonial-2.jpg' alt=''>"
-          >
-            <p class="fs-5">
-              Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo
-              duo labore sed sed. Magna ut diam sit et amet stet eos sed clita
-              erat magna elitr erat sit sit erat at rebum justo sea clita.
-            </p>
-            <h4>Client Name</h4>
-            <span class="text-primary">Profession</span>
-          </div>
-          <div
-            class="testimonial-item text-center"
-            data-dot="<img class='img-fluid' src='img/testimonial-3.jpg' alt=''>"
-          >
-            <p class="fs-5">
-              Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo
-              duo labore sed sed. Magna ut diam sit et amet stet eos sed clita
-              erat magna elitr erat sit sit erat at rebum justo sea clita.
-            </p>
-            <h4>Client Name</h4>
-            <span class="text-primary">Profession</span>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
+    
 
     <!-- Footer Start -->
     <div
