--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Securex - CCTV Camera Website Template</title>
+    <title>Clikin Tech Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -50,13 +50,13 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-map-marker-alt text-white"></small>
                     </div>
-                    <small>123 Street, New York, USA</small>
+                    <small>Barrackpore, Kolkata, West Bengal- 700 122</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-envelope-open text-white"></small>
                     </div>
-                    <small>info@example.com</small>
+                    <small>contact@clikintech.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-end">
@@ -64,7 +64,7 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-phone-alt text-white"></small>
                     </div>
-                    <small>+012 345 6789</small>
+                    <small>+91 81001 29292</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
@@ -81,49 +81,40 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h2 class="m-0 text-primary">Securex</h2>
+          <!-- New SVG icon code -->
+          <svg width="972" height="307" viewBox="0 0 972 307" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M436.7 155.9C428.8 155.9 421.5 154.6 414.8 152C408.1 149.3 402.3 145.55 397.4 140.75C392.5 135.95 388.65 130.3 385.85 123.8C383.15 117.3 381.8 110.2 381.8 102.5C381.8 94.8 383.15 87.7 385.85 81.2C388.65 74.7 392.5 69.05 397.4 64.25C402.4 59.45 408.25 55.75 414.95 53.15C421.65 50.45 428.95 49.1 436.85 49.1C444.45 49.1 451.6 50.4 458.3 53C465 55.5 470.65 59.3 475.25 64.4L468.2 71.45C463.9 67.05 459.15 63.9 453.95 62C448.75 60 443.15 59 437.15 59C430.85 59 425 60.1 419.6 62.3C414.2 64.4 409.5 67.45 405.5 71.45C401.5 75.35 398.35 79.95 396.05 85.25C393.85 90.45 392.75 96.2 392.75 102.5C392.75 108.8 393.85 114.6 396.05 119.9C398.35 125.1 401.5 129.7 405.5 133.7C409.5 137.6 414.2 140.65 419.6 142.85C425 144.95 430.85 146 437.15 146C443.15 146 448.75 145 453.95 143C459.15 141 463.9 137.8 468.2 133.4L475.25 140.45C470.65 145.55 465 149.4 458.3 152C451.6 154.6 444.4 155.9 436.7 155.9ZM515.413 155V50H526.513V145.4H585.313V155H515.413ZM620.243 155V50H631.343V155H620.243ZM691.606 128.9L691.156 115.4L754.756 50H767.506L721.156 98.6L714.856 105.35L691.606 128.9ZM682.006 155V50H693.106V155H682.006ZM757.456 155L712.156 102.8L719.656 94.7L770.656 155H757.456ZM805.147 155V50H816.247V155H805.147ZM866.911 155V50H876.061L948.511 141.2H943.711V50H954.661V155H945.511L873.211 63.8H878.011V155H866.911Z" fill="#383838"/>
+            <path d="M412.5 281V236.48H395.28V232H434.9V236.48H417.68V281H412.5ZM468.795 253.91H494.695V258.32H468.795V253.91ZM469.355 276.52H498.825V281H464.175V232H497.775V236.48H469.355V276.52ZM553.145 281.42C549.458 281.42 546.051 280.813 542.925 279.6C539.798 278.34 537.091 276.59 534.805 274.35C532.518 272.11 530.721 269.473 529.415 266.44C528.155 263.407 527.525 260.093 527.525 256.5C527.525 252.907 528.155 249.593 529.415 246.56C530.721 243.527 532.518 240.89 534.805 238.65C537.138 236.41 539.868 234.683 542.995 233.47C546.121 232.21 549.528 231.58 553.215 231.58C556.761 231.58 560.098 232.187 563.225 233.4C566.351 234.567 568.988 236.34 571.135 238.72L567.845 242.01C565.838 239.957 563.621 238.487 561.195 237.6C558.768 236.667 556.155 236.2 553.355 236.2C550.415 236.2 547.685 236.713 545.165 237.74C542.645 238.72 540.451 240.143 538.585 242.01C536.718 243.83 535.248 245.977 534.175 248.45C533.148 250.877 532.635 253.56 532.635 256.5C532.635 259.44 533.148 262.147 534.175 264.62C535.248 267.047 536.718 269.193 538.585 271.06C540.451 272.88 542.645 274.303 545.165 275.33C547.685 276.31 550.415 276.8 553.355 276.8C556.155 276.8 558.768 276.333 561.195 275.4C563.621 274.467 565.838 272.973 567.845 270.92L571.135 274.21C568.988 276.59 566.351 278.387 563.225 279.6C560.098 280.813 556.738 281.42 553.145 281.42ZM639.017 232H644.127V281H639.017V232ZM608.357 281H603.177V232H608.357V281ZM639.507 258.39H607.797V253.84H639.507V258.39Z" fill="#383838"/>
+            <circle cx="242" cy="240" r="25" fill="#383838"/>
+            <path d="M291.219 221.291C307.297 188.629 311.243 151.315 302.352 116.012C293.461 80.7089 272.312 49.7152 242.681 28.5642C213.05 7.41325 176.867 -2.51792 140.59 0.543822C104.314 3.60557 70.3067 19.4609 44.6402 45.279C18.9736 71.0971 3.31868 105.197 0.470491 141.491C-2.3777 177.785 7.76626 213.909 29.0912 243.415C50.4162 272.921 81.534 293.887 116.889 302.57C152.243 311.253 189.533 307.088 222.101 290.818L202.515 251.614C179.246 263.239 152.602 266.215 127.341 260.011C102.08 253.807 79.8465 238.826 64.6097 217.744C49.373 196.662 42.1251 170.851 44.1602 144.919C46.1952 118.988 57.3807 94.623 75.7195 76.1759C94.0583 57.7289 118.357 46.4002 144.276 44.2126C170.196 42.0249 196.049 49.1208 217.22 64.2332C238.391 79.3456 253.502 101.491 259.855 126.715C266.208 151.939 263.388 178.599 251.901 201.937L291.219 221.291Z" fill="black"/>
+            <circle cx="155" cy="153" r="76" fill="#383838"/>
+          </svg>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-4 py-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
-                <a href="project.html" class="nav-item nav-link">Project</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item active">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <div class="h-100 d-lg-inline-flex align-items-center d-none">
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-square rounded-circle bg-light text-primary me-0" href=""><i class="fab fa-instagram"></i></a>
-            </div>
+          <div class="navbar-nav ms-auto py-4 py-lg-0">
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="service.html" class="nav-item nav-link">Service</a>
+            <a href="Career.html" class="nav-item nav-link">Career</a>
+            <a href="privacy.html" class="nav-item nav-link">Privacy & Policy</a>
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+          </div>
         </div>
-    </nav>
-    <!-- Navbar End -->
+      </nav>
 
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5">
         <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Our Team</h1>
+            <h1 class="display-3 text-white mb-3 animated slideInDown">Privacy & Policy</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
                     <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">Our Team</li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Privacy & Policy</li>
                 </ol>
             </nav>
         </div>
