changeservice page privacy and policy page

--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
               <div class="position-relative h-100">
                 <img
                   class="position-absolute img-fluid w-100 h-100"
-                  src="img/clickintech3.png"
+                  src="img/About us page-pana (2).png"
                   style="object-fit: cover"
                   alt=""
                 />
@@ -143,8 +143,7 @@
                 ></div>
                 <h1 class="display-5 mb-4">About Us</h1>
                 <p class="mb-4 pb-2">
-                  Clikin Tech is a Digital Marketing Agency that help businesses
-                  grow while establishing credibility with clients.
+                  a click today, a smooth business for tomorrow.
                 </p>
               </div>
             </div>
@@ -159,25 +158,9 @@
         ></div>
         <h3 class="display-5 mb-4">Our Story</h3>
         <p class="mb-4 pb-2">
-          Marketing strategies have been around for a long time, serving
-          as a means for businesses to promote their products and
-          services. Initially, we relied heavily on traditional marketing
-          methods. But as technology advances, so do our marketing
-          solutions and techniques. For companies looking to build a
-          robust online presence, digital marketing is the perfect
-          ingredient for success. With the widespread use of social media
-          and other online platforms, digital strategies have gained
-          significant momentum. Clikin Tech is a newly established agency
-          providing businesses with impactful digital marketing solutions.
-          Our primary objective is to enhance your website traffic,
-          increase sales, and boost your income. With a focus on
-          maximizing the effectiveness of your digital marketing
-          campaigns, we will collaborate closely with you, considering
-          your budget and target audience, to effectively communicate your
-          message. By staying up-to-date with the latest advancements in
-          digital marketing, we will create successful local campaigns
-          tailored to meet your specific goals.
+          Clikin Tech is a software company located in West Bengal. We specialize in providing customized enterprise software solutions.
         </p>
+        
         <h3 class="display-5 mb-4">Our Mission</h3>
         <p class="mb-4 pb-2">
          Our mission is to be the trusted partner for businesses seeking powerful digital marketing solutions. With our unrivaled creativity and expertise in digital marketing, we are dedicated to transforming our client's dreams into reality. By leveraging cutting-edge digital strategies, and harnessing the power of a data-driven approach, we strive to deliver exceptional results. We are driven by a relentless pursuit of success and outcomes that surpass expectations. As a cohesive team, we foster an environment of support, inspiration, and continuous growth, valuing individuality and our unwavering commitment to every project as if they were our own.
@@ -201,7 +184,7 @@
    <div class="row g-5">
     <div class="col-lg-3 col-md-6">
       <p class="mb-2">
-        <i class="fa fa-phone-alt me-3"></i>+91 7278817473
+        <i class="fa fa-phone-alt me-3"></i>+91 81001 29292
       </p>
       <p class="mb-2">
         <i class="fa fa-envelope me-3"></i>contact@clikintech.com
