--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 px-4 px-lg-5">
       <a href="index.html" class="navbar-brand d-flex align-items-center">
         <!-- New SVG icon code -->
-        <svg width="972" height="307" viewBox="0 0 972 307" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg width="600" height="200" viewBox="0 0 972 307" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M436.7 155.9C428.8 155.9 421.5 154.6 414.8 152C408.1 149.3 402.3 145.55 397.4 140.75C392.5 135.95 388.65 130.3 385.85 123.8C383.15 117.3 381.8 110.2 381.8 102.5C381.8 94.8 383.15 87.7 385.85 81.2C388.65 74.7 392.5 69.05 397.4 64.25C402.4 59.45 408.25 55.75 414.95 53.15C421.65 50.45 428.95 49.1 436.85 49.1C444.45 49.1 451.6 50.4 458.3 53C465 55.5 470.65 59.3 475.25 64.4L468.2 71.45C463.9 67.05 459.15 63.9 453.95 62C448.75 60 443.15 59 437.15 59C430.85 59 425 60.1 419.6 62.3C414.2 64.4 409.5 67.45 405.5 71.45C401.5 75.35 398.35 79.95 396.05 85.25C393.85 90.45 392.75 96.2 392.75 102.5C392.75 108.8 393.85 114.6 396.05 119.9C398.35 125.1 401.5 129.7 405.5 133.7C409.5 137.6 414.2 140.65 419.6 142.85C425 144.95 430.85 146 437.15 146C443.15 146 448.75 145 453.95 143C459.15 141 463.9 137.8 468.2 133.4L475.25 140.45C470.65 145.55 465 149.4 458.3 152C451.6 154.6 444.4 155.9 436.7 155.9ZM515.413 155V50H526.513V145.4H585.313V155H515.413ZM620.243 155V50H631.343V155H620.243ZM691.606 128.9L691.156 115.4L754.756 50H767.506L721.156 98.6L714.856 105.35L691.606 128.9ZM682.006 155V50H693.106V155H682.006ZM757.456 155L712.156 102.8L719.656 94.7L770.656 155H757.456ZM805.147 155V50H816.247V155H805.147ZM866.911 155V50H876.061L948.511 141.2H943.711V50H954.661V155H945.511L873.211 63.8H878.011V155H866.911Z" fill="#383838"/>
           <path d="M412.5 281V236.48H395.28V232H434.9V236.48H417.68V281H412.5ZM468.795 253.91H494.695V258.32H468.795V253.91ZM469.355 276.52H498.825V281H464.175V232H497.775V236.48H469.355V276.52ZM553.145 281.42C549.458 281.42 546.051 280.813 542.925 279.6C539.798 278.34 537.091 276.59 534.805 274.35C532.518 272.11 530.721 269.473 529.415 266.44C528.155 263.407 527.525 260.093 527.525 256.5C527.525 252.907 528.155 249.593 529.415 246.56C530.721 243.527 532.518 240.89 534.805 238.65C537.138 236.41 539.868 234.683 542.995 233.47C546.121 232.21 549.528 231.58 553.215 231.58C556.761 231.58 560.098 232.187 563.225 233.4C566.351 234.567 568.988 236.34 571.135 238.72L567.845 242.01C565.838 239.957 563.621 238.487 561.195 237.6C558.768 236.667 556.155 236.2 553.355 236.2C550.415 236.2 547.685 236.713 545.165 237.74C542.645 238.72 540.451 240.143 538.585 242.01C536.718 243.83 535.248 245.977 534.175 248.45C533.148 250.877 532.635 253.56 532.635 256.5C532.635 259.44 533.148 262.147 534.175 264.62C535.248 267.047 536.718 269.193 538.585 271.06C540.451 272.88 542.645 274.303 545.165 275.33C547.685 276.31 550.415 276.8 553.355 276.8C556.155 276.8 558.768 276.333 561.195 275.4C563.621 274.467 565.838 272.973 567.845 270.92L571.135 274.21C568.988 276.59 566.351 278.387 563.225 279.6C560.098 280.813 556.738 281.42 553.145 281.42ZM639.017 232H644.127V281H639.017V232ZM608.357 281H603.177V232H608.357V281ZM639.507 258.39H607.797V253.84H639.507V258.39Z" fill="#383838"/>
           <circle cx="242" cy="240" r="25" fill="#383838"/>
@@ -128,7 +128,7 @@
                     We Help Businesses To Be Digitally Visible!
                   </h1>
                   <p class="fs-5 text-white mb-4 pb-2">
-                    Ensuring that your business thrives and stands out digitally
+                    A click today, a smooth business for tomorrow.Ensuring that your business thrives and stands out digitally
                     via our technological solutions is our uttermost priority.We
                     are a global and trusted software Organisation, for
                     world-className brands. We provide digital solutions that
@@ -188,9 +188,7 @@
                     Innovative Solution For Security System
                   </h1>
                   <p class="fs-5 fw-medium text-white mb-4 pb-2">
-                    Vero elitr justo clita lorem. Ipsum dolor at sed stet sit
-                    diam no. Kasd rebum ipsum et diam justo clita et kasd rebum
-                    sea elitr.
+                    Cutting-edge technology ensuring unparalleled safety. Advanced algorithms and real-time monitoring provide robust protection against threats. Elevate your security standards with our innovative solution.
                   </p>
                   <a
                     href=""
@@ -213,54 +211,37 @@
 
     <!-- About Start -->
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
-      <div class="container about px-lg-0">
-        <div class="row g-0 mx-lg-0">
-          <div class="col-lg-6 ps-lg-0" style="min-height: 400px">
-            <div class="position-relative h-100">
-              <img
-                class="position-absolute img-fluid w-100 h-100"
-                src="img/pexels-gabby-k-6237898.jpg"
-                style="object-fit: cover"
-                alt=""
-              />
+      <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+        <div class="container about px-lg-0">
+          <div class="row g-0 mx-lg-0">
+            <div class="col-lg-6 ps-lg-0" style="min-height: 400px">
+              <div class="position-relative h-100">
+                <img
+                  class="position-absolute img-fluid w-100 h-100"
+                  src="img/About us page-pana (2).png"
+                  style="object-fit: cover"
+                  alt=""
+                />
+              </div>
             </div>
-          </div>
-          <div
-            class="col-lg-6 about-text py-5 wow fadeIn"
-            data-wow-delay="0.5s"
-          >
-            <div class="p-lg-5 pe-lg-0">
-              <div
-                class="bg-primary mb-3"
-                style="width: 60px; height: 2px"
-              ></div>
-
-              <h3 class="display-5 mb-4">Our Story</h3>
-              <p class="mb-4 pb-2">
-                Marketing strategies have been around for a long time, serving
-                as a means for businesses to promote their products and
-                services. Initially, we relied heavily on traditional marketing
-                methods. But as technology advances, so do our marketing
-                solutions and techniques. For companies looking to build a
-                robust online presence, digital marketing is the perfect
-                ingredient for success. With the widespread use of social media
-                and other online platforms, digital strategies have gained
-                significant momentum. Clikin Tech is a newly established agency
-                providing businesses with impactful digital marketing solutions.
-                Our primary objective is to enhance your website traffic,
-                increase sales, and boost your income. With a focus on
-                maximizing the effectiveness of your digital marketing
-                campaigns, we will collaborate closely with you, considering
-                your budget and target audience, to effectively communicate your
-                message. By staying up-to-date with the latest advancements in
-                digital marketing, we will create successful local campaigns
-                tailored to meet your specific goals.
-              </p>
+            <div
+              class="col-lg-6 about-text py-5 wow fadeIn"
+              data-wow-delay="0.5s"
+            >
+              <div class="p-lg-5 pe-lg-0">
+                <div
+                  class="bg-primary mb-3"
+                  style="width: 60px; height: 2px"
+                ></div>
+                <h1 class="display-5 mb-4">About Us</h1>
+                <p class="mb-4 pb-2">
+                  a click today, a smooth business for tomorrow.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <!-- About End -->
 
     <!-- Service Start -->
@@ -282,7 +263,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/saas-software-as-a-service-cloud-sevice-synchronize-illustration-vector.jpg"
+                  src="img/saas (1).png"
                   alt="Icon"
                 />
               </div>
@@ -307,7 +288,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/AR and VR development.png"
+                  src="img/vr-glasses.png"
                   alt="Icon"
                 />
               </div>
@@ -331,7 +312,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/appdevelopment.jpg"
+                  src="img/mobile-development.png"
                   alt="Icon"
                 />
               </div>
@@ -356,7 +337,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/Artificial-Intelligence_emf.jpg"
+                  src="img/technology.png"
                   alt="Icon"
                 />
               </div>
@@ -650,7 +631,7 @@
    <div class="row g-5">
     <div class="col-lg-3 col-md-6">
       <p class="mb-2">
-        <i class="fa fa-phone-alt me-3"></i>+91 7278817473
+        <i class="fa fa-phone-alt me-3"></i>+91 81001 29292
       </p>
       <p class="mb-2">
         <i class="fa fa-envelope me-3"></i>contact@clikintech.com
