--- a/privacy.html
+++ b/privacy.html
@@ -142,7 +142,7 @@ data-wow-delay="0.1s"
   <div class="row g-5">
    <div class="col-lg-3 col-md-6">
      <p class="mb-2">
-       <i class="fa fa-phone-alt me-3"></i>+91 7278817473
+       <i class="fa fa-phone-alt me-3"></i>+91 81001 29292
      </p>
      <p class="mb-2">
        <i class="fa fa-envelope me-3"></i>contact@clikintech.com
