--- a/service.html
+++ b/service.html
@@ -138,7 +138,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/saas-software-as-a-service-cloud-sevice-synchronize-illustration-vector.jpg"
+                  src="img/saas (1).png"
                   alt="Icon"
                 />
               </div>
@@ -163,7 +163,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/AR and VR development.png"
+                  src="img/vr-glasses.png"
                   alt="Icon"
                 />
               </div>
@@ -187,7 +187,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/appdevelopment.jpg"
+                  src="img/mobile-development.png"
                   alt="Icon"
                 />
               </div>
@@ -212,7 +212,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="img/Artificial-Intelligence_emf.jpg"
+                  src="img/technology.png"
                   alt="Icon"
                 />
               </div>
@@ -240,7 +240,7 @@
     <div class="row g-5">
      <div class="col-lg-3 col-md-6">
        <p class="mb-2">
-         <i class="fa fa-phone-alt me-3"></i>+91 7278817473
+         <i class="fa fa-phone-alt me-3"></i>+91 81001 29292
        </p>
        <p class="mb-2">
          <i class="fa fa-envelope me-3"></i>contact@clikintech.com
