--- a/contact.html
+++ b/contact.html
@@ -235,7 +235,7 @@
    <div class="row g-5">
     <div class="col-lg-3 col-md-6">
       <p class="mb-2">
-        <i class="fa fa-phone-alt me-3"></i>+91 7278817473
+        <i class="fa fa-phone-alt me-3"></i>+91 81001 29292
       </p>
       <p class="mb-2">
         <i class="fa fa-envelope me-3"></i>contact@clikintech.com
