--- a/about.html
+++ b/about.html
@@ -93,7 +93,6 @@
           <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="about.html" class="nav-item nav-link">About</a>
           <a href="service.html" class="nav-item nav-link">Service</a>
-          <a href="Career.html" class="nav-item nav-link">Career</a>
           <a href="privacy.html" class="nav-item nav-link">Privacy & Policy</a>
           <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
@@ -119,6 +118,7 @@
     <!-- Page Header End -->
 
     <!-- About Start -->
+    <a name="about"></a>
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
         <div class="container about px-lg-0">
           <div class="row g-0 mx-lg-0">
@@ -143,7 +143,7 @@
                 ></div>
                 <h1 class="display-5 mb-4">About Us</h1>
                 <p class="mb-4 pb-2">
-                  a click today, a smooth business for tomorrow.
+                  ClikinTech is a Software Company. The Headquarters of ClikinTech is in Kolkata, West Bengal. ClikinTech helps the Clients with customized Enterprise software.  Embracing efficiency today ensures a seamless business operation tomorrow, as every click becomes a catalyst for future success
                 </p>
               </div>
             </div>
@@ -158,7 +158,7 @@
         ></div>
         <h3 class="display-5 mb-4">Our Story</h3>
         <p class="mb-4 pb-2">
-          Clikin Tech is a software company located in West Bengal. We specialize in providing customized enterprise software solutions.
+          ClikinTech is a Software Company. The Headquarters of ClikinTech is in Kolkata, West Bengal. ClikinTech helps the Clients with customized Enterprise software.
         </p>
         
         <h3 class="display-5 mb-4">Our Mission</h3>
