added portfolio link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <a href="#service" class="nav-item nav-link">Service</a>
           <a href="privacy.html" class="nav-item nav-link">Privacy & Policy</a>
           <a href="#contact" class="nav-item nav-link">Contact</a>
-          <a href="#portfolio" class="nav-item nav-link btn btn-custom"
+          <a href="https://www.behance.net/clikin-tech" class="nav-item nav-link btn btn-custom"
             >Portfolio</a
           >
         </div>
