--- a/privacy.html
+++ b/privacy.html
@@ -146,7 +146,7 @@
         <div class="navbar-nav ms-auto py-4 py-lg-0">
           <a href="index.html" class="nav-item nav-link active">Home</a>
           <a href="privacy.html" class="nav-item nav-link">Privacy & Policy</a>
-          <a href="#portfolio" class="nav-item nav-link btn btn-custom"
+          <a href="https://www.behance.net/clikin-tech" class="nav-item nav-link btn btn-custom"
             >Portfolio</a
           >
         </div>
